--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-
 # Compiled output
 /dist
 /tmp
@@ -42,3 +40,6 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+temp/
+public/
